Bug fixed on methods,service and updated scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -194,3 +194,25 @@
 .price-range-tick._5 {
   right: 0%;
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #dbdbdb #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #dbdbdb;
+    border-radius: 21px;
+    border: 8px solid #ffffff;
+  }
